# inft2503

./: .gitignore  README.md
eksempler/: eksempel.cpp  toerpot.cpp
leksjon-1/: CMakeLists.txt  answer.cpp  bye.cpp  main.cpp  tallfil.cpp
leksjon-2/: CMakeLists.txt  pointer.cpp  reference.cpp
leksjon-3/: CMakeLists.txt  surface.cpp  toupper.cpp
leksjon-4/: CMakeLists.txt  example1.cpp
leksjon-6/: CMakeLists.txt  main.cpp
oving-1/: CMakeLists.txt  solution1.cpp  solution2.cpp
oving-1/.cache/clangd/index/: solution1.cpp.66B8F4D10ECD6380.idx  solution2.cpp.49883DE6A596F823.idx  temperature.hpp.D84FEF946B6B29EA.idx
oving-2/: CMakeLists.txt  danger.cpp  solution.md  solution1.cpp  solution23.md  solution4.cpp  solution5.cpp  solution6.cpp
oving-3/: CMakeLists.txt  commodity.cpp  commodity.hpp  solution1.cpp  solution12.cpp  solution4.cpp
oving-5/: CMakeLists.txt  chess.cpp
oving-6/: CMakeLists.txt  chess.cpp  endpoint.cpp  endpoint.hpp  http_controller.cpp  http_controller.hpp  http_request.hpp  http_server.cpp  http_server.hpp  new_server.cpp  server.cpp  utils.cpp  utils.hpp
oving-6/.cache/clangd/index/: chess.cpp.0EBF091A2D364B85.idx  endpoint.hpp.334F1AFD148BC12A.idx  http_controller.hpp.27668229AE9BEAB1.idx  http_server.hpp.0FD0A80173E554CA.idx  new_server.cpp.9BD4C15955C3F6B8.idx  server.cpp.3E3CD731817C2E09.idx
oving-7/: CMakeLists.txt  fraction.cpp  fraction.hpp  main.cpp  main2.cpp  set.cpp  set.hpp
oving-8/: CMakeLists.txt  pair.cpp  solution1.cpp  solution2.cpp
oving-9/: CMakeLists.txt  main.cpp
