cmake_minimum_required(VERSION 3.1)

project(oving-2)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Wall -Wextra")

add_executable(solution1 solution1.cpp)
add_executable(danger danger.cpp)
add_executable(solution4 solution4.cpp)
add_executable(solution5 solution5.cpp)
add_executable(solution6 solution6.cpp)
